test/fails/bad_functions/extern5.lgl
declare vec3 f(color x);

void main() {
    print f();
    return;
}